resolve issues in PR comments